# aws.inmatura.com

./: .firebaserc  .gitignore  DEVELOP.md  Makefile  README.md  Taskfile.yml  environment.yml  firebase.json  justfile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflow/: deploy.yml
.github/workflows/: deploy-cf-pages.yml  deploy-firebase.yml  deploy.yml  gcs.yml
docs/: index.md  support.md
docs/ami/jupyterhub/: custom-domain.md  dask.md  dns.md  gpu.md  https.md  index.md  jupyter.md  launch-ec2.md  python.md  r.md  rapids.md  rstudio.md  server-mgmt.md  ssl.md  tf-th.md  user-mgmt.md  versions.md  voila.md  vscode.md
docs/assets/css/: custom.css
docs/assets/js/: custom.js
docs/jupyterhub-ami/: commands.md  configuration.md  dask.md  dns.md  getting-started.md  gpu.md  ides.md  index.md  jupyter.md  launch-ec2.md  launch.md  management.md  packages.md  python.md  r.md  rapids.md  rstudio.md  ssl.md  stop.md  support.md  terminate.md  terminatet.md  user-mgmt.md  users.md  voila.md  vscode.md
docs/model/efficientnet-b3/: base-endpoint.md  train.md
docs/model/gpt-2/: performance.md
docs/model/instance-segmentation-mask-r-cnn/: api.md  examples.md  index.md  launch-endpoint.md  performance.md
docs/model/snippets/: info-how-to-query.md  terminate.md
docs/models/efficientnet-b3/: api.md  base-endpoint.md  examples.md  getting-started.md  index.md  launch.md  terminate.md  train-endpoint.md  train.md
docs/models/gpt-2/: api.md  examples.md  getting-started.md  index.md  launch.md  terminate.md  usage.md
docs/models/img-obj-mask-r-cnn/: api.md  examples.md  (+3 more)
docs/snippets/: support.md
(+17 files in other folders)
