[tool.poetry]
name = "docs.extrapolaciones.com"
version = "1.0.0"
description = "Source for docs.extrapolaciones.com"
authors = ["Daniel Rodriguez"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
mkdocs = "^1.2.2"
mkdocs-material = "^7.3.6"
mkdocs-jupyter = "^0.18.1"
mkdocs-minify-plugin = "^0.4.0"
Pygments = "^2.10.0"
pymdown-extensions = "^9.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
black = "^21.8b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
